fixed get instance bug